// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Breadcrumbs All With Custom Separator 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
      <span
        className="css-1x8bxab"
      >
        <span
          className="css-mg3idc"
        >
          <svg
            className="css-1f0g1kv"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/"
      >
        Gas & Electricity
      </a>
      <span
        className="css-1x8bxab"
      >
        <span
          className="css-mg3idc"
        >
          <svg
            className="css-1f0g1kv"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/guides"
      >
        Guides
      </a>
      <span
        className="css-1x8bxab"
      >
        <span
          className="css-mg3idc"
        >
          <svg
            className="css-1f0g1kv"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="css-17eecus"
    >
      Understanding energy bills and electricity bills - FAQs and more
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Example With Title 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/"
      >
        Gas & Electricity
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/guides"
      >
        Guides
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-17eecus"
    >
      Understanding energy bills and electricity bills - FAQs and more
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Example Without Title 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/"
      >
        Gas & Electricity
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-6n7j50"
    >
      <a
        className="css-v7r2qz"
        href="/gas-electricity/guides"
      >
        Guides
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs No Crumbs And No Title 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs No Crumbs And Title 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
      <span
        className="css-1x8bxab"
      >
        &gt;
      </span>
    </li>
    <li
      className="css-17eecus"
    >
      Understanding energy bills and electricity bills - FAQs and more
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Nothing With Custom Separator 1`] = `
<div
  className="css-m9xbk1"
>
  <ul
    className="css-3sfm5d"
  >
    <li
      className="css-6n7j50"
    >
      <a
        className="css-1jl2fel"
        href="/"
      >
        <div
          className="css-1xz46z6"
        >
          <svg
            className="css-h6t2h7"
            viewBox="0 0 14 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
            />
          </svg>
        </div>
      </a>
    </li>
  </ul>
</div>
`;
